--- a/comNode/vite-project/package.json
+++ b/comNode/vite-project/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^11.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^5.4.0",
+    "react-oauth": "^0.0.1",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
